# cp_website

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
cp_main/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
cp_main/migrations/: 0001_initial.py  0002_alter_submission_status.py  0002_assignment_slug_submission_slug.py  0002_profile_avatar.py  0003_alter_assignment_date_assigned.py  0003_alter_submission_status.py  0003_assignment.py  0004_alter_submission_status.py  0004_assignment_tags.py  0004_question_remove_assignment_link_to_question_and_more.py  0005_alter_submission_sub.py
cp_main/templates/cp_main/: all_user_profiles.html  assignment.html  base.html  create.html  create_assignment.html  create_new_question.html  delete_question.html  home.html  profile.html  submit_assignment.html  update_assignment.html  update_question.html  view_assignment.html  view_assignments.html  view_questions.html  view_submissions.html
cp_main/templates/registration/: login.html  signup.html
miccp/: asgi.py  settings.py  urls.py  wsgi.py
