[tool.poetry]
name = "miccp-project"
version = "0.1.0"
description = ""
authors = ["RiyaSharma82308 <riya82308@gmail.com>"]
readme = "README.md"
packages = [{include = "miccp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
Pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
